--- a/static/html/homepage.html
+++ b/static/html/homepage.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="../css/homepage.css">
+    <script src="../script/homepage.js"></script>
 </head>
-<body>
-    <h1 id='heading'>Fitness is Love</h1>
+<body onpageshow="sendid()">
+    <h1 id='heading'>Fitness is Love, Welcome <label id="unameprint"></label> </h1>
     <table class="table" width=30%>
-        <tr height=150px>
-            <td id="Chest">Chest</td>
-            <td id="Legs">Legs</td>
+        <tr>
+            <td height=150px onclick="chests()" id="Chest">Chest</td>
+            <td height=150px onclick= 'window.location.href="../html/legs.html"' id="Legs">Legs</td>
         </tr>
-        <tr  height=150px>
-            <td id="Triceps">Triceps</td>
-            <td id="Biceps">Biceps</td>
+        <tr  >
+            <td height=150px onclick= 'window.location.href="../html/triceps.html"' id="Triceps">Triceps</td>
+            <td height=150px onclick= 'window.location.href="../html/biceps.html"' id="Biceps">Biceps</td>
         </tr>
     </table>
     
